# midi-visualizer

./: .gitignore  Cargo.toml  LICENSE  README.md
rust/: Cargo.toml  README.md
rust/src/: dto.rs  main.rs  midi_listener.rs  websocket.rs
src/: main.rs
svelte/: README.md  package-lock.json  package.json  rollup.config.js
svelte/src/: App.svelte
svelte/src/components/: CircleOfFiths.svelte
