[package]
name = "midi-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portmidi = "^0.2"
tungstenite = "0.17.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
